--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gizlilik Politikası - Face Pet Match</title>
+    <title>Privacy Policy - Face Pet Match</title>
 </head>
 <body>
-    <h1>Gizlilik Politikası - Face Pet Match</h1>
-    <p>Bu Gizlilik Politikası, Face Pet Match uygulamasının (bundan sonra "Uygulama" olarak anılacaktır) kullanıcı verilerini nasıl işlediğini açıklar.</p>
+    <h1>Privacy Policy - Face Pet Match</h1>
+    <p>This Privacy Policy explains how the Face Pet Match application (hereinafter referred to as the "Application") processes user data.</p>
 
-    <h2>1. Toplanan Veriler</h2>
-    <p>Uygulama, kullanıcıların fotoğraflarını veya kişisel verilerini toplamaz. Fotoğraflar, yalnızca <code>face-api.js</code> kütüphanesi kullanılarak yerel cihazda analiz edilir ve bu süreç tamamen cihazda gerçekleşir. Hiçbir veri sunuculara gönderilmez veya saklanmaz.</p>
+    <h2>1. Data Collected</h2>
+    <p>The Application does not collect users' photos or personal data. Photos are analyzed solely using the <code>face-api.js</code> library on our servers, and this process occurs entirely on the servers. No data is sent to or stored on local devices.</p>
 
-    <h2>2. Veri Kullanımı</h2>
-    <p>Analiz edilen veriler, yalnızca pet eşleştirme özelliği için yerel olarak işlenir ve Uygulama dışında herhangi bir amaçla kullanılmaz.</p>
+    <h2>2. Data Usage</h2>
+    <p>The analyzed data is processed on servers exclusively for the pet matching feature and is not used for any purpose outside the Application.</p>
 
-    <h2>3. Veri Paylaşımı</h2>
-    <p>Uygulama, hiçbir kullanıcı verisini üçüncü taraflarla paylaşmaz. Fotoğraflar veya analiz sonuçları dışarıya aktarılmaz.</p>
+    <h2>3. Data Sharing</h2>
+    <p>The Application does not share any user data with third parties. Photos or analysis results are not exported externally.</p>
 
-    <h2>4. Çocuklarla İlgili Politika</h2>
-    <p>Bu Uygulama, 13 yaş altı çocuklar için tasarlanmamıştır. 13 yaş altı kullanıcıların verilerini bilerek toplamayız, çünkü herhangi bir veri toplama işlemi gerçekleştirilmemektedir.</p>
+    <h2>4. Policy Regarding Children</h2>
+    <p>This Application is not designed for children under the age of 13. We do not knowingly collect data from users under 13, as no data collection occurs on local devices.</p>
 
-    <h2>5. Kullanıcı Hakları</h2>
-    <p>Uygulama veri toplamadığından, kullanıcıların veri silme veya erişim talebinde bulunmasına gerek yoktur. Sorularınız için <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a> adresinden bizimle iletişime geçebilirsiniz.</p>
+    <h2>5. User Rights</h2>
+    <p>Since the Application does not collect data on local devices, users do not need to request data deletion or access. For any questions, you can contact us at <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a>.</p>
 
-    <h2>6. Güncellemeler</h2>
-    <p>Bu politika, gerektiğinde güncellenebilir. Değişiklikler Uygulama içinde duyurulur.</p>
+    <h2>6. Updates</h2>
+    <p>This policy may be updated as needed. Changes will be announced within the Application.</p>
 
-    <p><strong>İletişim:</strong> <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a></p>
+    <p><strong>Contact:</strong> <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a></p>
 </body>
 </html>
