--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <p>This Privacy Policy explains how the Face Pet Match application (hereinafter referred to as the "Application") processes user data.</p>
 
     <h2>1. Data Collected</h2>
-    <p>The Application does not collect users' photos or personal data. Photos are analyzed solely using the <code>face-api.js</code> library on our servers, and this process occurs entirely on the servers. No data is sent to or stored on local devices.</p>
+    <p>The Application does not collect or store users' personal data or photos. Photos are used temporarily for facial analysis purposes using the <code>face-api.js</code> library on our servers. No user data or photos are stored permanently or linked to a specific identity.</p>
 
-    <h2>2. Data Usage</h2>
-    <p>The analyzed data is processed on servers exclusively for the pet matching feature and is not used for any purpose outside the Application.</p>
+    <h2>2. Camera Access</h2>
+    <p>The Application requires access to the device's camera in order to capture a user's photo for the pet matching feature. This photo is used solely for real-time processing and is not saved on the device or servers. The photo is discarded immediately after the analysis is completed.</p>
 
-    <h2>3. Data Sharing</h2>
-    <p>The Application does not share any user data with third parties. Photos or analysis results are not exported externally.</p>
+    <h2>3. Data Usage</h2>
+    <p>Captured photos are processed on servers exclusively for the purpose of matching users with pets based on facial similarity. The data is not used for any other purposes and is never retained after processing.</p>
 
-    <h2>4. Policy Regarding Children</h2>
-    <p>This Application is not designed for children under the age of 13. We do not knowingly collect data from users under 13, as no data collection occurs on local devices.</p>
+    <h2>4. Data Sharing</h2>
+    <p>The Application does not share any user data, including photos or analysis results, with third parties. All processing occurs within the scope of the Application.</p>
 
-    <h2>5. User Rights</h2>
-    <p>Since the Application does not collect data on local devices, users do not need to request data deletion or access. For any questions, you can contact us at <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a>.</p>
+    <h2>5. Policy Regarding Children</h2>
+    <p>This Application is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. As no personal data is stored, any use by children is not tracked or recorded.</p>
 
-    <h2>6. Updates</h2>
-    <p>This policy may be updated as needed. Changes will be announced within the Application.</p>
+    <h2>6. User Rights</h2>
+    <p>Since the Application does not store any user data, there is no need for data deletion or access requests. For questions or concerns, you can contact us at <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a>.</p>
+
+    <h2>7. Updates</h2>
+    <p>This Privacy Policy may be updated from time to time. Any changes will be announced within the Application.</p>
 
     <p><strong>Contact:</strong> <a href="mailto:alpipekciler@gmail.com">alpipekciler@gmail.com</a></p>
 </body>
